--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,12 @@
   margin-left: auto;
   margin-right: auto;
 }
-
+.search {
+  display: flex;
+}
+.search_input {
+  margin-right: 10px;
+}
 input {
   height: 40px;
   width: 50%;
@@ -13,7 +18,7 @@ input {
   border-bottom: 2px #101113 solid;
   background: none;
   font-size: 1.5rem;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 input:focus {
@@ -28,8 +33,8 @@ button {
   font-size: 25px;
   background: #101113;
   border-radius: 5px;
-  color: #FFFFFF;
-  cursor: pointer; 
+  color: #ffffff;
+  cursor: pointer;
 }
 
 button:focus {
@@ -60,7 +65,7 @@ li {
   }
 
   input {
-    width: 100%
+    width: 100%;
   }
 
   button {
