--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,12 @@
 }
 input {
   height: 40px;
-  width: 50%;
+  width: 25%;
   border: none;
   border-bottom: 2px #101113 solid;
   background: none;
   font-size: 1.5rem;
-  color: #ffffff;
+  color: #000000;
 }
 
 input:focus {
@@ -45,7 +45,7 @@ ul {
   list-style: none;
   text-align: left;
   padding: 15px;
-  background: #171a1f;
+  background: #d9dee6;
   border-radius: 5px;
 }
 
@@ -53,7 +53,7 @@ li {
   padding: 15px;
   font-size: 1.5rem;
   margin-bottom: 15px;
-  background: #282c34;
+  background: #b0b3b9;
   border-radius: 5px;
   overflow-wrap: break-word;
   cursor: pointer;
@@ -81,7 +81,7 @@ li {
   }
 
   input {
-    width: 50%;
+    width: 25%;
   }
 
   button {
