--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
-  background-color: #555555;
-  color: #FFFFFF;
+  background-color: #ffffff;
+  color: #000000;
 }
 
 code {
