--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,16 @@
 }
 input {
   height: 40px;
-  width: 25%;
+  width: 20%;
   border: none;
   border-bottom: 2px #101113 solid;
   background: none;
   font-size: 1.5rem;
   color: #000000;
+}
+
+select {
+  width: 30%;
 }
 
 input:focus {
