--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   font-size: calc(10px + 2vmin);
-  width: 60%;
+  width: 80%%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -11,26 +11,28 @@
 .search_input {
   margin-right: 10px;
 }
-input {
+/* input {
   height: 40px;
-  width: 20%;
+  width: 50%;
   border: none;
   border-bottom: 2px #101113 solid;
   background: none;
   font-size: 1.5rem;
   color: #000000;
-}
+} */
 
-select {
-  width: 30%;
-}
+/* .multi_select {
+  display: flex;
+   width: 50%; 
+   width: 400px; 
+} */
 
 input:focus {
   outline: none;
 }
 
 button {
-  width: 25%;
+  width: 20%;
   height: 45px;
   border: none;
   margin-left: 10px;
@@ -68,9 +70,9 @@ li {
     width: 80%;
   }
 
-  input {
+  /* input {
     width: 100%;
-  }
+  } */
 
   button {
     width: 100%;
@@ -84,9 +86,9 @@ li {
     width: 60%;
   }
 
-  input {
+  /* input {
     width: 25%;
-  }
+  } */
 
   button {
     width: 30%;
