--- a/src/App.css
+++ b/src/App.css
@@ -1,98 +1,38 @@
 .App {
   text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   font-size: calc(10px + 2vmin);
-  width: 80%%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.search {
-  display: flex;
-}
-.search_input {
-  margin-right: 10px;
-}
-/* input {
-  height: 40px;
-  width: 50%;
-  border: none;
-  border-bottom: 2px #101113 solid;
-  background: none;
-  font-size: 1.5rem;
-  color: #000000;
-} */
-
-/* .multi_select {
-  display: flex;
-   width: 50%; 
-   width: 400px; 
-} */
-
-input:focus {
-  outline: none;
+  color: white;
 }
 
-button {
-  width: 20%;
-  height: 45px;
-  border: none;
-  margin-left: 10px;
-  font-size: 25px;
-  background: #101113;
-  border-radius: 5px;
-  color: #ffffff;
-  cursor: pointer;
+.App-link {
+  color: #61dafb;
 }
 
-button:focus {
-  outline: none;
-}
-
-ul {
-  list-style: none;
-  text-align: left;
-  padding: 15px;
-  background: #d9dee6;
-  border-radius: 5px;
-}
-
-li {
-  padding: 15px;
-  font-size: 1.5rem;
-  margin-bottom: 15px;
-  background: #b0b3b9;
-  border-radius: 5px;
-  overflow-wrap: break-word;
-  cursor: pointer;
-}
-
-@media only screen and (min-width: 300px) {
-  .App {
-    width: 80%;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
   }
-
-  /* input {
-    width: 100%;
-  } */
-
-  button {
-    width: 100%;
-    margin-top: 15px;
-    margin-left: 0;
-  }
-}
-
-@media only screen and (min-width: 640px) {
-  .App {
-    width: 60%;
-  }
-
-  /* input {
-    width: 25%;
-  } */
-
-  button {
-    width: 30%;
-    margin-left: 10px;
-    margin-top: 0;
+  to {
+    transform: rotate(360deg);
   }
 }
